fixed div overlap issue

--- a/app/assets/stylesheets/sites.scss
+++ b/app/assets/stylesheets/sites.scss
@@ -1,3 +1,7 @@
+#money {
+  clear: both;
+}
+
 body{
     color: white;
     background-color: #EDF4F5;
